Update 08MIAR Aprendizaje por refuerzo - Proyecto práctico.ipynb
Añado red basada en ejemplo de clase

--- a/08MIAR Aprendizaje por refuerzo - Proyecto práctico.ipynb
+++ b/08MIAR Aprendizaje por refuerzo - Proyecto práctico.ipynb
@@ -51,8 +51,7 @@
    "outputs": [],
    "source": [
     "# Uncomment this line for installing keras-rl on Google collaboratory\n",
-    "!pip install keras-rl\n",
-    "# Hello my friends test adadadadada holaaaaaa\n"
+    "#!pip install keras-rl"
    ]
   },
   {
@@ -64,18 +63,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'Adam' from 'keras.optimizers' (/usr/local/lib/python3.8/site-packages/keras/optimizers.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_1254/1103201365.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSequential\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDense\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mActivation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFlatten\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mConvolution2D\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mPermute\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptimizers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAdam\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackend\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'Adam' from 'keras.optimizers' (/usr/local/lib/python3.8/site-packages/keras/optimizers.py)"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/inigo/.local/share/virtualenvs/08_aprendizaje_por_refuerzo-a97gBoCq/lib/python3.7/site-packages/ale_py/roms/utils.py:90: DeprecationWarning: SelectableGroups dict interface is deprecated. Use select.\n",
+      "  for external in metadata.entry_points().get(self.group, []):\n",
+      "Using TensorFlow backend.\n",
+      "/Users/inigo/.local/share/virtualenvs/08_aprendizaje_por_refuerzo-a97gBoCq/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:526: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/Users/inigo/.local/share/virtualenvs/08_aprendizaje_por_refuerzo-a97gBoCq/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:527: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/Users/inigo/.local/share/virtualenvs/08_aprendizaje_por_refuerzo-a97gBoCq/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:528: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/Users/inigo/.local/share/virtualenvs/08_aprendizaje_por_refuerzo-a97gBoCq/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:529: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/Users/inigo/.local/share/virtualenvs/08_aprendizaje_por_refuerzo-a97gBoCq/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:530: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/Users/inigo/.local/share/virtualenvs/08_aprendizaje_por_refuerzo-a97gBoCq/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:535: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
      ]
     }
    ],
@@ -107,9 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "A.L.E: Arcade Learning Environment (version +978d2ce)\n",
+      "[Powered by Stella]\n"
+     ]
+    }
+   ],
    "source": [
     "INPUT_SHAPE = (84, 84)\n",
     "WINDOW_LENGTH = 4\n",
@@ -124,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,17 +150,81 @@
     "    def process_observation(self, observation):\n",
     "        assert observation.ndim == 3  # (height, width, channel)\n",
     "        img = Image.fromarray(observation)\n",
-    "        img = img.resize(INPUT_SHAPE).convert('L')\n",
+    "        img = img.resize(INPUT_SHAPE).convert('L') # a escala de grises\n",
     "        processed_observation = np.array(img)\n",
     "        assert processed_observation.shape == INPUT_SHAPE\n",
-    "        return processed_observation.astype('uint8')\n",
+    "        return processed_observation.astype('uint8') # casting a 8 bits\n",
     "\n",
     "    def process_state_batch(self, batch):\n",
-    "        processed_batch = batch.astype('float32') / 255.\n",
+    "        processed_batch = batch.astype('float32') / 255. # normalizar entre 0 y 1\n",
     "        return processed_batch\n",
     "\n",
     "    def process_reward(self, reward):\n",
-    "        return np.clip(reward, -1., 1.)"
+    "        return np.clip(reward, -1., 1.) # se acota para que no sea tan sensible a valores extremos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Acciones disponibles en el entorno\n",
+    "nb_actions = env.action_space.n\n",
+    "nb_actions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['NOOP', 'FIRE', 'RIGHT', 'LEFT', 'RIGHTFIRE', 'LEFTFIRE']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Nombres de las acciones\n",
+    "env.unwrapped.get_action_meanings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(210, 160, 3)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Dimensions de las observaciones del entorno\n",
+    "env.observation_space.shape"
    ]
   },
   {
@@ -154,10 +236,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /Users/inigo/.local/share/virtualenvs/08_aprendizaje_por_refuerzo-a97gBoCq/lib/python3.7/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "permute_1 (Permute)          (None, 84, 84, 4)         0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_1 (Conv2D)            (None, 20, 20, 32)        8224      \n",
+      "_________________________________________________________________\n",
+      "activation_1 (Activation)    (None, 20, 20, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 9, 9, 64)          32832     \n",
+      "_________________________________________________________________\n",
+      "activation_2 (Activation)    (None, 9, 9, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 7, 7, 64)          36928     \n",
+      "_________________________________________________________________\n",
+      "activation_3 (Activation)    (None, 7, 7, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 3136)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 512)               1606144   \n",
+      "_________________________________________________________________\n",
+      "activation_4 (Activation)    (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 6)                 3078      \n",
+      "_________________________________________________________________\n",
+      "activation_5 (Activation)    (None, 6)                 0         \n",
+      "=================================================================\n",
+      "Total params: 1,687,206\n",
+      "Trainable params: 1,687,206\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Next, we build our model. We use the same model that was described by Mnih et al. (2015).\n",
+    "input_shape = (WINDOW_LENGTH,) + INPUT_SHAPE\n",
+    "model = Sequential()\n",
+    "\n",
+    "# segun el backend, se usa un ordenamiento de dimensiones diferente (para tensorflow o theano)\n",
+    "if K.image_dim_ordering() == 'tf':\n",
+    "    # (width, height, channels)\n",
+    "    model.add(Permute((2, 3, 1), input_shape=input_shape))\n",
+    "elif K.image_dim_ordering() == 'th':\n",
+    "    # (channels, width, height)\n",
+    "    model.add(Permute((1, 2, 3), input_shape=input_shape))\n",
+    "else:\n",
+    "    raise RuntimeError('Unknown image_dim_ordering.')\n",
+    "\n",
+    "model.add(Convolution2D(32, (8, 8), strides=(4, 4)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Convolution2D(64, (4, 4), strides=(2, 2)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Convolution2D(64, (3, 3), strides=(1, 1)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(512))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Dense(nb_actions))\n",
+    "model.add(Activation('linear')) # lineal porque son las recompensas esperadas a futuro para cada accion (nb_actions)\n",
+    "print(model.summary())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,10 +319,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "memory = SequentialMemory(limit=1000000, window_length=WINDOW_LENGTH)\n",
+    "processor = AtariProcessor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nb_steps será el tiempo que durará la exploración, antes de pasar a explotación. \n",
+    "# value_test guarda un pelín de aleatoriedad para minimizar el riesgo de estancamiento en minimos durante el test\n",
+    "# empieza muy aleatorio a 1 (100%) de acciones aleatorias y va decreciendo a más acciones 'predichas/aprendidas'\n",
+    "policy = LinearAnnealedPolicy(EpsGreedyQPolicy(), attr='eps',\n",
+    "                              value_max=1., value_min=.1, value_test=.05,\n",
+    "                              nb_steps=1000000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-12-06 00:46:14.038204: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: AVX2 FMA\n"
+     ]
+    }
+   ],
+   "source": [
+    "# recordar que el modelo se 'duplica' uno para target y otro para predicción, ambos idénticos\n",
+    "# gamma es el discount factor de las rewards\n",
+    "# target se actualiza cada 10000 steps\n",
+    "# cada 20 steps, se actualizan los pesos del modelo\n",
+    "# bajamos el learning rate\n",
+    "dqn = DQNAgent(model=model, nb_actions=nb_actions, policy=policy,\n",
+    "               memory=memory, processor=processor,\n",
+    "               nb_steps_warmup=50000, gamma=.99,\n",
+    "               target_model_update=10000,\n",
+    "               train_interval=20)\n",
+    "dqn.compile(Adam(lr=.00025), metrics=['mae'])"
+   ]
   },
   {
    "cell_type": "code",
@@ -199,9 +394,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "5482123bcaf343c05f291758151eccc65058c21ead9b1a99bca5a882cfa393ae"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.7.9 64-bit ('08_aprendizaje_por_refuerzo-a97gBoCq': pipenv)",
    "name": "python3"
   },
   "language_info": {
@@ -214,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
