Update 08MIAR Aprendizaje por refuerzo - Proyecto práctico.ipynb

--- a/08MIAR Aprendizaje por refuerzo - Proyecto práctico.ipynb
+++ b/08MIAR Aprendizaje por refuerzo - Proyecto práctico.ipynb
@@ -374,6 +374,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Training part\n",
+    "# log en pantalla cada 10,000 steps\n",
+    "# cada 250000 steps almaceno versiones del modelo (callbacks)\n",
+    "# el log escrito, cada 100 steps\n",
+    "weights_filename = 'dqn_{}_weights.h5f'.format(env_name)\n",
+    "checkpoint_weights_filename = 'dqn_' + env_name + '_weights_{step}.h5f'\n",
+    "log_filename = 'dqn_{}_log.json'.format(env_name)\n",
+    "callbacks = [ModelIntervalCheckpoint(checkpoint_weights_filename, interval=250000)]\n",
+    "callbacks += [FileLogger(log_filename, interval=100)]\n",
+    "\n",
+    "dqn.fit(env, callbacks=callbacks, nb_steps=1750000, log_interval=10000, visualize=True)\n",
+    "\n",
+    "dqn.save_weights(weights_filename, overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Testing part to calculate the mean reward\n",
     "weights_filename = 'dqn_{}_weights.h5f'.format(env_name)\n",
     "dqn.load_weights(weights_filename)\n",
