añado comandos para tensorboard

--- a/08MIAR Aprendizaje por refuerzo - Proyecto práctico.ipynb
+++ b/08MIAR Aprendizaje por refuerzo - Proyecto práctico.ipynb
@@ -108,6 +108,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# para tensorboard\n",
+    "# Load the TensorBoard notebook extension\n",
+    "%load_ext tensorboard\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "import datetime, os\n",
+    "\n",
+    "# Clear any logs from previous runs\n",
+    "!rm -rf ./logs/ "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -399,6 +416,15 @@
     "weights_filename = 'dqn_{}_weights.h5f'.format(env_name)\n",
     "dqn.load_weights(weights_filename)\n",
     "dqn.test(env, nb_episodes=10, visualize=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%tensorboard --logdir logs/fit"
    ]
   },
   {
